Added themes and other melodies